@@ -1082,6 +1082,10 @@ enum
     SPR_G2_T_CARON_LOWER,
     SPR_G2_U_RING_UPPER,
     SPR_G2_U_RING_LOWER,
+    SPR_G2_W_CIRCUMFLEX_UPPER,
+    SPR_G2_W_CIRCUMFLEX_LOWER,
+    SPR_G2_Y_CIRCUMFLEX_UPPER,
+    SPR_G2_Y_CIRCUMFLEX_LOWER,
     SPR_G2_Z_CARON_UPPER,
     SPR_G2_Z_CARON_LOWER,
 
